--- a/public/styles.css
+++ b/public/styles.css
@@ -1,52 +1,78 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+*{
+    font-family: Poppins, Helvetica, sans-serif;
+}
+
 body {
-    font-family: Arial, Helvetica, sans-serif;
     margin: 0;
     padding: 0;
     background-color: #454b6e;
+    box-sizing: border-box;
 }
 header {
     background-color: #051c24;
     color: rgb(245, 241, 241);
     padding: 1em;
-    text-align: center;
-    border-bottom: 2px solid #070d13;
+    justify-content: flex-end;
+    display: flex;
 }
 .logo {
     display: flex;
     align-items: center;
-    justify-content: center;
+    margin-right: auto;
 }
 
 .logo img {
     height: 30px;
     margin-right: 1em;
 }
+
+.logo h1{
+    margin: 0;
+}
+
+.logo h1 a{
+    text-decoration: none;
+    color: white;
+}
+
 nav ul {
     list-style-type: none;
     padding: 0;
-    margin: 0;
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     gap: 1em;
 }
 nav ul li {
     display: inline;
+    padding-inline: 1em;
 }
 nav ul li a {
+    text-decoration: none;
     color: white;
-    font-weight: bold;
+    text-transform: uppercase;
+    font-weight: 200;
+    transition: 0.1s;
 }
 nav ul li a:hover {
     color: #1e90ff;
 }
 main {
+    color: white;
     padding: 2em;
     background-color: #2b3154c9;
 }
 h2 {
+    font-weight: 500;
     padding-bottom: 0.5em;
     border-bottom: 2px solid #051c24;
 }
+
+p{
+    font-weight: 300;
+}
+
 section {
     margin-bottom: 2em;
 }
@@ -85,4 +111,27 @@ footer a {
 }
 footer a:hover {
     text-decoration: underline;
+}
+
+.loginBtn{
+    border: none;
+    outline: none;
+    padding-inline: 2em;
+    font-size: medium;
+    text-transform: uppercase;
+    letter-spacing: 0.3cap;
+    padding-block: 0.7em;
+    border-radius: 16px;
+    color: white;
+    background-color: #25274d;
+    transition: 0.2s;
+    cursor: pointer;
+}
+
+.loginBtn:hover{
+    background-color: #1a1b3a;
+}
+
+.loginBtn:active{
+    background-color: #15162e;
 }
